--- a/index.html
+++ b/index.html
@@ -1,9 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Crystal Collector Game</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Homemade+Apple" rel="stylesheet">
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
+	<script type="text/javascript" src="game.js"></script>
+
+
 </head>
 <body>
+<h1 class="crystalP1">Crystal Collector Game</h1>
+
+<h2 id="computerRanNum"></h2>
+
+<section>
+
+	<div id="crystalsRanNum">
+		<img class="crystalsPics crystalDiv" src="assets/crystal.one.jpg" style= "width:304px;height:228px;">
+
+		<img class="crystalsPics crystalDiv" src="assets/crystal.two.jpg" style="width:304px;height:228px;">
+
+		<img class="crystalsPics crystalDiv" src="assets/crystal.three.jpg" style="width:304px;height:228px;">
+
+		<img class="crystalsPics crystalDiv" src="assets/crystal.four.jpg" style="width:304px;height:228px;">
+
+	</div>
+
+	<div>
+		<img class="secondCrystal" src="assets/crystal.five.jpg" style= "width:304px;height:228px;">
+		<img class="secondCrystal" src="assets/crystal.six.jpg" style= "width:304px;height:228px;">
+		<img class="secondCrystal" src="assets/crystal.seven.jpg" style= "width:304px;height:228px;">
+		<img class="secondCrystal" src="assets/crystal.eight.jpg" style= "width:304px;height:228px;">
+	</div>
+
+
+
+</section>
+
+<div class="scoreCounter">
+	<p>Number of Wins: <span id="win">0</span></p>
+	<p>Number of Losses: <span id="losses">0</span></p>
+</div>
+
+<h2 id="finalTotal"></h2>
+
+
 
 </body>
 </html>
