--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Homemade+Apple" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
 	<script type="text/javascript" src="game.js"></script>
 
@@ -18,6 +19,7 @@
 <section>
 
 	<div id="crystalsRanNum">
+		
 		<img class="crystalsPics crystalDiv" src="assets/crystal.one.jpg" style= "width:304px;height:228px;">
 
 		<img class="crystalsPics crystalDiv" src="assets/crystal.two.jpg" style="width:304px;height:228px;">
@@ -25,17 +27,16 @@
 		<img class="crystalsPics crystalDiv" src="assets/crystal.three.jpg" style="width:304px;height:228px;">
 
 		<img class="crystalsPics crystalDiv" src="assets/crystal.four.jpg" style="width:304px;height:228px;">
+		
+		<img class="crystalsPics secondCrystal" src="assets/crystal.five.jpg" style= "width:304px;height:228px;">
+		
+		<img class="crystalsPics secondCrystal" src="assets/crystal.six.jpg" style= "width:304px;height:228px;">
+		
+		<img class="crystalsPics secondCrystal" src="assets/crystal.seven.jpg" style= "width:304px;height:228px;">
+		
+		<img class="crystalsPics secondCrystal" src="assets/crystal.eight.jpg" style= "width:304px;height:228px;">
 
 	</div>
-
-	<div>
-		<img class="secondCrystal" src="assets/crystal.five.jpg" style= "width:304px;height:228px;">
-		<img class="secondCrystal" src="assets/crystal.six.jpg" style= "width:304px;height:228px;">
-		<img class="secondCrystal" src="assets/crystal.seven.jpg" style= "width:304px;height:228px;">
-		<img class="secondCrystal" src="assets/crystal.eight.jpg" style= "width:304px;height:228px;">
-	</div>
-
-
 
 </section>
 
